[gd_scene load_steps=38 format=3 uid="uid://c60utmosg6idx"]

[ext_resource type="Texture2D" uid="uid://c7thnwhpiw6xc" path="res://UI/sprites/reference.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dib1w1judeeb2" path="res://UI/Menu_Sprites/background.png" id="2"]
[ext_resource type="PackedScene" uid="uid://crx57hj081ag0" path="res://Scenes/Character Bubble.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://belf0op6o2ek2" path="res://UI/sprites/character_sprites/faces/0.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ftttl40wh16g" path="res://UI/sprites/character_sprites/faces/2.png" id="5"]
[ext_resource type="PackedScene" path="res://Scenes/Settings.tscn" id="6"]
[ext_resource type="Script" uid="uid://ben0kvs4llmuh" path="res://Scripts/Level_Scripts/DominoWorld.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://dq5f7r63drllb" path="res://Scenes/Domino.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://dejvxq7nbxxxf" path="res://Scenes/Path.tscn" id="9"]
[ext_resource type="FontFile" uid="uid://dcgbqt5s40js7" path="res://UI/Fonts/Nunito/Nunito-Regular.ttf" id="10"]
[ext_resource type="AudioStream" uid="uid://dod16p8my67xs" path="res://audio/effects/select.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://bjdomk6fvs8ts" path="res://audio/effects/next.wav" id="12"]
[ext_resource type="Texture2D" uid="uid://f3flf06cem8b" path="res://UI/sprites/character_sprites/back_hair/8.png" id="13"]
[ext_resource type="PackedScene" uid="uid://2qcxgankmj3j" path="res://Scenes/SaveButton.tscn" id="14"]
[ext_resource type="PackedScene" path="res://Scenes/Tower.tscn" id="15"]
[ext_resource type="FontFile" uid="uid://cxgxlgqxgek6n" path="res://UI/Fonts/Non_Nunito/domino_font/human_domino.otf" id="16"]
[ext_resource type="Theme" uid="uid://brneq6bi4fuba" path="res://UI/Miscellaneous/ui_theme.tres" id="17"]
[ext_resource type="Texture2D" uid="uid://77bnnplkinqm" path="res://UI/Control/grey_button_down.png" id="18"]
[ext_resource type="Texture2D" uid="uid://coqqyg76wct3k" path="res://UI/Control/grey_button03.png" id="19"]
[ext_resource type="Texture2D" uid="uid://4y0sfebdco0k" path="res://UI/Control/green_button13.png" id="20"]
[ext_resource type="Texture2D" uid="uid://dvt8gtpnny5pi" path="res://UI/Control/red_cross.png" id="21"]
[ext_resource type="Texture2D" uid="uid://rgufcushbbn1" path="res://UI/Control/grey_crossGrey.png" id="22"]
[ext_resource type="Texture2D" uid="uid://byy16ybwc3qjx" path="res://UI/Control/green_button01.png" id="23"]
[ext_resource type="Texture2D" uid="uid://cvync24oqcy7k" path="res://UI/Control/green_button00.png" id="24"]
[ext_resource type="Texture2D" uid="uid://b0dvssdrdf6g2" path="res://UI/Control/grey_panel.png" id="25"]

[sub_resource type="Animation" id="1"]
resource_name = "Zoom In"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.5, 2.5), Vector2(1.7, 1.7)]
}

[sub_resource type="Animation" id="2"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.7, 1.7), Vector2(2.5, 2.5)]
}

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("10")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("10")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("10")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="8"]
fallbacks = Array[Font]([ExtResource("10")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("10")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("16")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="12"]
fallbacks = Array[Font]([ExtResource("16")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="14"]
fallbacks = Array[Font]([ExtResource("16")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="13"]
fallbacks = Array[Font]([ExtResource("16")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="15"]
fallbacks = Array[Font]([ExtResource("16")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="World" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("7")
Domino = ExtResource("8")

[node name="Board" type="Sprite2D" parent="."]
position = Vector2(-192, 5.96046e-08)
rotation = 1.20428
scale = Vector2(1.5, 1.5)
z_index = -3
texture = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -6)
rotation = -3.14159
scale = Vector2(-0.310642, 2.9514)
current = true
zoom = Vector2(2.5, 2.5)

[node name="Path1" parent="." instance=ExtResource("9")]
visible = false
position = Vector2(80, -600)
scale = Vector2(0.2, 0.2)
z_index = -2
texture = null

[node name="Path2" parent="." instance=ExtResource("9")]
visible = false
position = Vector2(-472, -600)
scale = Vector2(0.2, 0.2)
z_index = -2
texture = null
num = 1

[node name="Path3" parent="." instance=ExtResource("9")]
visible = false
position = Vector2(408, -272)
scale = Vector2(0.2, 0.2)
z_index = -2
texture = null
num = 2

[node name="Path4" parent="." instance=ExtResource("9")]
visible = false
position = Vector2(-792, 288)
scale = Vector2(0.2, 0.2)
z_index = -2
texture = null
num = 3

[node name="Path5" parent="." instance=ExtResource("9")]
visible = false
position = Vector2(-456, 608)
scale = Vector2(0.2, 0.2)
z_index = -2
texture = null
num = 4

[node name="Path6" parent="." instance=ExtResource("9")]
visible = false
position = Vector2(48, 616)
scale = Vector2(0.2, 0.2)
z_index = -2
texture = null
num = 5

[node name="SunrisePath" parent="." instance=ExtResource("9")]
position = Vector2(-800, -256)
scale = Vector2(0.2, 0.2)
z_index = -2
texture = null
num = 6

[node name="SunsetPath" parent="." instance=ExtResource("9")]
position = Vector2(384, 312)
scale = Vector2(0.2, 0.2)
z_index = -2
texture = null
num = 7

[node name="Character Bubble1" parent="." instance=ExtResource("3")]
position = Vector2(-24, -424)
scale = Vector2(2.5, 2.5)
z_index = -1

[node name="back_hair" parent="Character Bubble1" index="2"]
texture = ExtResource("13")

[node name="Score" parent="Character Bubble1" index="4"]
z_index = 2

[node name="Character Bubble2" parent="." instance=ExtResource("3")]
position = Vector2(-368, -424)
scale = Vector2(2.5, 2.5)
z_index = -1

[node name="Character Bubble3" parent="." instance=ExtResource("3")]
position = Vector2(232, -184)
scale = Vector2(2.5, 2.5)
z_index = -1

[node name="Character Bubble4" parent="." instance=ExtResource("3")]
position = Vector2(-632, 184)
scale = Vector2(2.5, 2.5)
z_index = -1

[node name="Character Bubble5" parent="." instance=ExtResource("3")]
position = Vector2(-376, 440)
scale = Vector2(2.5, 2.5)
z_index = -1

[node name="Character Bubble6" parent="." instance=ExtResource("3")]
position = Vector2(-24, 440)
scale = Vector2(2.5, 2.5)
z_index = -1

[node name="sunrise" type="Sprite2D" parent="."]
position = Vector2(-632, -176)
scale = Vector2(1.5, 1.5)
z_index = -1
texture = ExtResource("4")

[node name="sunset" type="Sprite2D" parent="."]
position = Vector2(232, 192)
scale = Vector2(1.5, 1.5)
z_index = -1
texture = ExtResource("5")

[node name="Settings" parent="." instance=ExtResource("6")]
visible = false
position = Vector2(-528, -304)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3507.0
offset_top = -3730.0
offset_right = -3507.0
offset_bottom = -3330.0
scale = Vector2(8, 5)
mouse_filter = 2
texture = ExtResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Zoom Out"
"anims/Zoom In" = SubResource("1")
"anims/Zoom Out" = SubResource("2")

[node name="Turn" type="Label" parent="."]
offset_left = -2110.24
offset_top = -1483.75
offset_right = -1805.24
offset_bottom = -1204.75
scale = Vector2(2, 2)
theme_override_fonts/font = SubResource("5")
text = "'s
Turn"

[node name="End" type="Label" parent="."]
visible = false
offset_left = 368.0
offset_top = -664.0
offset_right = 1256.0
offset_bottom = 38.0
theme_override_fonts/font = SubResource("5")
text = "Tally Up Your
 Points! 
(Hover over
faces to see
scores)"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlloyPopup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1336.0
offset_top = -880.0
offset_right = -136.0
offset_bottom = -80.0001
scale = Vector2(1.4, 1.4)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="AlloyPopup"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -568.0
offset_right = 576.0
offset_bottom = 138.0
theme_override_fonts/font = SubResource("6")
text = "Alloy Acquired!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alloy" type="Label" parent="AlloyPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = -264.0
offset_right = 576.0
offset_bottom = -126.0
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_fonts/font = SubResource("6")
text = "Electrum"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="AlloyPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -504.0
offset_top = 8.0
offset_right = 516.0
offset_bottom = 263.0
theme_override_fonts/font = SubResource("7")
text = "Electrum is an alloy of gold and silver.
It represents blah blab an dblah."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="AlloyPopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -80.0
offset_right = 41.0
offset_bottom = -5.0
theme_override_fonts/font = SubResource("8")
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WellnessBeadPopup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1336.0
offset_top = -880.0
offset_right = -136.0
offset_bottom = -80.0001
scale = Vector2(1.4, 1.4)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="WellnessBeadPopup"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -568.0
offset_right = 576.0
offset_bottom = 138.0
theme_override_fonts/font = SubResource("6")
text = "Alloy Acquired!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WellnessBead" type="Label" parent="WellnessBeadPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = -264.0
offset_right = 576.0
offset_bottom = -126.0
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_fonts/font = SubResource("6")
text = "Electrum"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="WellnessBeadPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -504.0
offset_top = 8.0
offset_right = 516.0
offset_bottom = 263.0
theme_override_fonts/font = SubResource("7")
text = "Electrum is an alloy of gold and silver.
It represents blah blab an dblah."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="WellnessBeadPopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -80.0
offset_right = 41.0
offset_bottom = -5.0
theme_override_fonts/font = SubResource("8")
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FootprintTilePopup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1336.0
offset_top = -880.0
offset_right = -136.0
offset_bottom = -80.0001
scale = Vector2(1.4, 1.4)

[node name="Title" type="Label" parent="FootprintTilePopup"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -570.857
offset_top = 5.71429
offset_right = 573.143
offset_bottom = 89.7143
theme_override_fonts/font = SubResource("6")
text = "Alloy Acquired!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FootprintTile" type="Label" parent="FootprintTilePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -574.571
offset_top = -323.0
offset_right = 569.429
offset_bottom = -223.0
theme_override_colors/font_color = Color(1, 0, 1, 1)
theme_override_fonts/font = SubResource("6")
text = "Electrum"
align = 1
valign = 1
autowrap = true

[node name="Info" type="Label" parent="FootprintTilePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -504.0
offset_top = 8.0
offset_right = 516.0
offset_bottom = 263.0
theme_override_fonts/font = SubResource("7")
text = "Electrum"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="FootprintTilePopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -80.0
offset_right = 41.0
offset_bottom = -5.0
theme_override_fonts/font = SubResource("8")
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="FootprintTilePopup"]
offset_left = 104.286
offset_top = 250.0
offset_right = 1104.29
offset_bottom = 612.0
theme_override_fonts/normal_font = SubResource("10")
text = "First Citizen:
Before we proceed any further, hear me speak.

All:
Speak, speak.

First Citizen:
You are all resolved rather to die than to famish?
First Citizen:
Before we proceed any further, hear me speak.

All:
Speak, speak.

First Citizen:
You are all resolved rather to die than to famish?"

[node name="CentralDomino" parent="." instance=ExtResource("8")]
position = Vector2(-192, 0)
placed = true

[node name="Place" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12")
volume_db = -10.0

[node name="Acquire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11")
volume_db = -5.0

[node name="NextSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12")
volume_db = -10.0

[node name="Tower" parent="." instance=ExtResource("15")]
position = Vector2(-2146, -494)

[node name="SaveButton" parent="." instance=ExtResource("14")]
position = Vector2(502, 1138)
rotation = -6.28319
scale = Vector2(3.55, 3.55)

[node name="Code" type="TextureButton" parent="."]
offset_left = -956.0
offset_top = 1138.0
offset_right = -337.0
offset_bottom = 1372.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("19")
texture_pressed = ExtResource("18")
texture_hover = ExtResource("20")
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Code"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_bottom = 15

[node name="Label" type="Label" parent="Code/MarginContainer"]
offset_right = 619.0
offset_bottom = 219.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = SubResource("11")
text = "Enter Code"
align = 1
valign = 1

[node name="Next" type="TextureButton" parent="."]
offset_left = -1706.0
offset_top = 1138.0
offset_right = -1087.0
offset_bottom = 1372.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("19")
texture_pressed = ExtResource("18")
texture_hover = ExtResource("20")
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Next"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_bottom = 15

[node name="Label" type="Label" parent="Next/MarginContainer"]
offset_right = 619.0
offset_bottom = 219.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = SubResource("11")
text = "Next Round"
align = 1
valign = 1

[node name="Help" type="TextureButton" parent="."]
offset_left = -2456.0
offset_top = 1138.0
offset_right = -1837.0
offset_bottom = 1372.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("19")
texture_pressed = ExtResource("18")
texture_hover = ExtResource("20")
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Help"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_bottom = 15

[node name="Label" type="Label" parent="Help/MarginContainer"]
offset_right = 619.0
offset_bottom = 219.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = SubResource("11")
text = "Need Help"
align = 1
valign = 1

[node name="Start" type="TextureButton" parent="."]
offset_left = 588.0
offset_top = -122.0
offset_right = 1207.0
offset_bottom = 112.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("19")
texture_pressed = ExtResource("18")
texture_hover = ExtResource("20")
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Start"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_bottom = 15

[node name="Label" type="Label" parent="Start/MarginContainer"]
offset_right = 619.0
offset_bottom = 219.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_fonts/font = SubResource("11")
text = "Start"
align = 1
valign = 1

[node name="EnterCodeMenu" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -847.0
offset_top = -495.0
offset_right = 847.0
offset_bottom = 495.0
texture = ExtResource("25")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 31
patch_margin_top = 28
patch_margin_right = 29
patch_margin_bottom = 28

[node name="MarginContainer" type="MarginContainer" parent="EnterCodeMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_right = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="EnterCodeMenu/MarginContainer"]
offset_left = 50.0
offset_top = 100.0
offset_right = 1644.0
offset_bottom = 890.0
theme_override_constants/separation = 25

[node name="EnterCode" type="Label" parent="EnterCodeMenu/MarginContainer/VBoxContainer"]
offset_right = 1594.0
offset_bottom = 144.0
theme_override_fonts/font = SubResource("12")
text = "Enter Code"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="EnterCodeMenu/MarginContainer/VBoxContainer"]
offset_top = 169.0
offset_right = 1594.0
offset_bottom = 319.0
custom_minimum_size = Vector2(0, 150)
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture = ExtResource("25")
region_rect = Rect2(-1.09497, -1, 102.095, 102.423)
patch_margin_left = 3
patch_margin_top = 7
patch_margin_right = 3
patch_margin_bottom = 35

[node name="MarginContainer" type="MarginContainer" parent="EnterCodeMenu/MarginContainer/VBoxContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_right = 25
theme_override_constants/margin_left = 25

[node name="LineEdit" type="LineEdit" parent="EnterCodeMenu/MarginContainer/VBoxContainer/NinePatchRect/MarginContainer"]
offset_left = 25.0
offset_right = 1569.0
offset_bottom = 150.0
theme = ExtResource("17")
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.533333, 1)
theme_override_fonts/font = SubResource("14")
align = 1
placeholder_alpha = 1.0

[node name="MarginContainer" type="MarginContainer" parent="EnterCodeMenu/MarginContainer/VBoxContainer"]
offset_top = 344.0
offset_right = 1594.0
offset_bottom = 694.0
mouse_filter = 2
theme_override_constants/margin_top = 150

[node name="Enter" type="TextureButton" parent="EnterCodeMenu/MarginContainer/VBoxContainer/MarginContainer"]
offset_left = 447.0
offset_top = 150.0
offset_right = 1147.0
offset_bottom = 350.0
custom_minimum_size = Vector2(700, 200)
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
texture_normal = ExtResource("24")
texture_pressed = ExtResource("23")
texture_hover = ExtResource("23")
expand = true

[node name="MarginContainer" type="MarginContainer" parent="EnterCodeMenu/MarginContainer/VBoxContainer/MarginContainer/Enter"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_bottom = 25

[node name="Label" type="Label" parent="EnterCodeMenu/MarginContainer/VBoxContainer/MarginContainer/Enter/MarginContainer"]
offset_top = 15.0
offset_right = 700.0
offset_bottom = 159.0
theme = ExtResource("17")
theme_override_fonts/font = SubResource("13")
text = "Enter"
align = 1
valign = 1

[node name="X" type="TextureButton" parent="EnterCodeMenu"]
offset_left = 1611.0
offset_top = 25.0
offset_right = 1665.0
offset_bottom = 77.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("22")
texture_pressed = ExtResource("21")
texture_hover = ExtResource("21")
expand = true

[node name="InvalidCode" type="Label" parent="EnterCodeMenu"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -42.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = SubResource("15")
text = "Invalid code!"
align = 1
valign = 1

[node name="UsedCode" type="Label" parent="EnterCodeMenu"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -42.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = SubResource("15")
text = "This code has been used already!"
align = 1
valign = 1

[node name="AcceptCode" type="Label" parent="EnterCodeMenu"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -42.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = SubResource("15")
text = "Code accepted!"
align = 1
valign = 1

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[connection signal="pressed" from="AlloyPopup/Close" to="." method="_close_Alloy_popup"]
[connection signal="pressed" from="WellnessBeadPopup/Close" to="." method="_close_WellnessBead_popup"]
[connection signal="pressed" from="FootprintTilePopup/Close" to="." method="_close_FootprintTile_popup"]
[connection signal="mouse_entered" from="Code" to="." method="_on_EnterCode_mouse_entered"]
[connection signal="mouse_exited" from="Code" to="." method="_on_EnterCode_mouse_exited"]
[connection signal="pressed" from="Code" to="." method="_on_Code_pressed"]
[connection signal="mouse_entered" from="Next" to="." method="_on_Next_mouse_entered"]
[connection signal="mouse_exited" from="Next" to="." method="_on_Next_mouse_exited"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="mouse_entered" from="Help" to="." method="_on_Help_mouse_entered"]
[connection signal="mouse_exited" from="Help" to="." method="_on_Help_mouse_exited"]
[connection signal="pressed" from="Help" to="." method="_on_Help_pressed"]
[connection signal="mouse_entered" from="Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Start" to="." method="_on_Start_mouse_exited"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="EnterCodeMenu/MarginContainer/VBoxContainer/MarginContainer/Enter" to="." method="_on_EnterButton_pressed"]
[connection signal="pressed" from="EnterCodeMenu/X" to="." method="_on_X_pressed"]

[editable path="Character Bubble1"]
[editable path="Character Bubble1/Score"]
[editable path="Settings"]
[editable path="CentralDomino"]
